--- a/views/register.ejs
+++ b/views/register.ejs
@@ -39,14 +39,14 @@
           />
         </div>
         <div class="form-group">
-          <label for="password2">Confirm Password</label>
+          <label for="password_confirm">Confirm Password</label>
           <input
             type="password"
-            id="password2"
-            name="password2"
+            id="password_confirm"
+            name="password_confirm"
             class="form-control"
             placeholder="Confirm Password"
-            value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
+            value="<%= typeof password_confirm != 'undefined' ? password_confirm : '' %>"
           />
         </div>
         <button type="submit" class="btn btn-primary btn-block">
