--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -2,7 +2,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body">
       <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
-      <%- include('partials/messages.ejs');%>
+      <%- include('../partials/messages.ejs');%>
       <form action="/users/login" method="POST" novalidate>
         <div class="form-group">
           <label for="email">Email</label>
@@ -28,6 +28,9 @@
       </form>
       <p class="lead mt-4">
         No Account? <a href="/users/register">Register</a>
+
+      <p class="lead mt-4">
+       <a href="/users/forgot-pass">Forgot Password</a>
       </p>
     </div>
   </div>
