--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -4,7 +4,7 @@
       <h1 class="text-center mb-3">
         <i class="fas fa-user-plus"></i> Register
       </h1>
-      <%- include('partials/messages.ejs');%>
+      <%- include('../partials/messages.ejs');%>
       <form action="/users/register" method="POST" novalidate>
         <div class="form-group">
           <label for="name">Name</label>
@@ -54,7 +54,7 @@
           Register
         </button>
       </form>
-      <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
+      <p class="lead mt-4 text-center">Have An Account? <a href="/users/login">Login</a></p>
     </div>
   </div>
 </div>
